--- a/templates/superview.phtml
+++ b/templates/superview.phtml
@@ -4,16 +4,32 @@ foreach ($superview as $path => $dirs) {
     print "<section><h3>$path</h3>";
     foreach ( $dirs as $dir => $mdfiles ) {
         print <<<eob
-        <p>$dir</p>
-        <table class="superview"><tr><th>Feed</th><th>Errs</th><th>XML</th><th>IdPs</th><th>SPs</th><th>Secs old</th></tr>
+        <table class="superview"><tr><th>Feed</th><th>XML</th><th>SPs</th><th>IdPs</th><th>Refresh in</th></tr>
 eob;
         foreach($mdfiles as $fed => $mdfile) {
             extract($mdfile);
             print <<<eob
-<tr><td><a href="mdfileview?type=$path&fed=$name">$name</a></td>
-<td><a href="mdfileview?type=$path&fed=$name&errs=1">$serrs / $mderrs</a></td>
-<td><a title="$fn" href="raw?type=$path&fed=$name">XML</a></td>
-<td>$idps</td><td>$sps</td><td>$delta</td></tr>
+<tr>
+	<td>
+		<a href="mdfileview?type=$path&fed=$name">
+			$name
+		</a>
+	</td>
+	<td>
+		<a href="raw?type=$path&fed=$name" title="$basename">
+			XML
+		</a>
+	</td>
+	<td>
+		$sps
+	</td>
+	<td>
+		$idps
+	</td>
+	<td>
+		$delta
+	</td>
+</tr>
 eob;
         }
         print "</table>";
