--- a/templates/show.phtml
+++ b/templates/show.phtml
@@ -100,7 +100,7 @@ $ticket = isset($le['ref']) ? $le['ref'] : '';
     </table>
   </section>
   <section class="half">
-  <h3>Attritbutes not supported by WAYF</h3>
+  <h3>Attributes not supported by WAYF</h3>
     <table class="attributes fixed">
       <thead>
         <tr>
